<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_profile"
        android:title="@string/nav_profile"/>

    <item
        android:id="@+id/nav_files"
        android:title="@string/nav_files"/>

    <item
        android:id="@+id/nav_data"
        android:title="Data Screen"/>

    <item
        android:id="@+id/nav_web"
        android:title="Web Screen"/>

    <item
        android:id="@+id/nav_background_work"
        android:title="@string/nav_background_work"/>

    <item
        android:id="@+id/nav_compass"
        android:title="@string/nav_compass"/>

    <item
        android:id="@+id/nav_camera_collage"
        android:title="@string/nav_camera_collage"/>

    <item
        android:id="@+id/nav_microphone"
        android:title="@string/nav_microphone"/>

</menu>